test/files/neg/macro-invalidsig-ctx-badvarargs/Impls_1.scala
import scala.reflect.macros.{Context => Ctx}

object Impls {
  def foo(cs: Ctx*) = ???
}
